--- a/src/components/global.css
+++ b/src/components/global.css
@@ -26,10 +26,20 @@ overflow: hidden;
   cursor: pointer;
 }
 
-.title{
-  display:flex;
+.card-header-title .columns {
+  /* display:flex; */
+  margin:auto;
   
 }
+
+/* card adjustments */
+
+.cardstyle{
+  height:fit-content;
+
+}
+
+
 /* This is the styling for the images in various pages */
 .imgstyle {
   margin: auto;
@@ -88,3 +98,17 @@ overflow: hidden;
   display:inline;
 }
 
+/* pagination code */
+
+.pagination-next, .pagination-previous {
+  border-color: black;
+}
+
+ .pagination-list{
+   display:inline-block;
+ }
+
+ .pagination{
+  display:block;
+  margin:2rem;
+ }
