screen background color changed

--- a/src/components/global.css
+++ b/src/components/global.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Pacifico&display=swap");
 html{
   /* background-color:#F2E3BC; */
-  background-color:#FFCBA4;
+  background-color:#FFE5B4;
 }
 .card{
   margin:auto;
